; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ascii.c_encode_to_ascii.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ascii.c_encode_to_ascii.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32)* @encode_to_ascii to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @encode_to_ascii(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = call i64 @VARDATA(i32* %5)
  %7 = inttoptr i64 %6 to i8*
  %8 = load i32*, i32** %3, align 8
  %9 = bitcast i32* %8 to i8*
  %10 = load i32*, i32** %3, align 8
  %11 = call i64 @VARSIZE(i32* %10)
  %12 = getelementptr inbounds i8, i8* %9, i64 %11
  %13 = load i32*, i32** %3, align 8
  %14 = call i64 @VARDATA(i32* %13)
  %15 = inttoptr i64 %14 to i8*
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @pg_to_ascii(i8* %7, i8* %12, i8* %15, i32 %16)
  %18 = load i32*, i32** %3, align 8
  ret i32* %18
}

declare dso_local i32 @pg_to_ascii(i8*, i8*, i8*, i32) #1

declare dso_local i64 @VARDATA(i32*) #1

declare dso_local i64 @VARSIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
